fix navigation responsive wrap

--- a/src/App.css
+++ b/src/App.css
@@ -53,6 +53,7 @@
 .topNavigation {
   display: flex;
   justify-content: center;
+  flex-wrap: wrap;
   font-weight: 700;
 }
 
